# hapjs

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  Jenkinsfile  NOTICE  README.md  scan_build.sh
.github/workflows/: build_and_release.yml  checkstyle.yml  docker-image.yml  main.yml  quickApp_CI.yml
.husky/: commit-msg  pre-commit
core/framework/: .clang-format  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc.json  README.MD  build.sh  commitlint.config.js  nyc.config.js  package-lock.json  package.json
core/framework/config/: deploy.js  rollup.base.js  rollup.config.js  sys-comp.js  util.js
core/framework/docs/: Framework Profiler.md
core/framework/src/shared/: error.js  events.js  function.js  pubsub.js  util.js
core/framework/sys-components/xvm/: .gitignore  babel.config.js  package.json
core/framework/test/config/: webpack.config.ux.js  webpack.worker.config.js
core/runtime/android/: config.gradle  version.gradle
core/runtime/android/widgets/src/main/cpp/canvas/: CMakeLists.txt  Log.cpp  Log.h  canvas_jni.cpp  exceptions.cpp  exceptions.h  utils.cpp  utils.h
debug/: README.MD
debug/shell/android/: .gitignore  build.gradle  settings.gradle  version.gradle
development/gradle-plugin/: build.gradle  gradle.properties  settings.gradle
development/gradle-plugin/annotation-executor/: build.gradle
development/gradle-plugin/annotation-generator/: README  build.gradle
mockup/platform/android/: build.gradle  debug-key.keystore  gradle.properties  settings.gradle
platform/: README.MD
(+2349 files in other folders)
